--- a/pom.xml
+++ b/pom.xml
@@ -32,17 +32,24 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-<!--         <dependency> -->
-<!--             <groupId>org.springframework.boot</groupId> -->
-<!--             <artifactId>spring-boot-starter-test</artifactId> -->
-<!--             <scope>test</scope> -->
-<!--             <exclusions> -->
-<!--                 <exclusion> -->
-<!--                     <groupId>org.junit.vintage</groupId> -->
-<!--                     <artifactId>junit-vintage-engine</artifactId> -->
-<!--                 </exclusion> -->
-<!--             </exclusions> -->
-<!--         </dependency> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <!--         <dependency> -->
+        <!--             <groupId>org.springframework.boot</groupId> -->
+        <!--             <artifactId>spring-boot-starter-test</artifactId> -->
+        <!--             <scope>test</scope> -->
+        <!--             <exclusions> -->
+        <!--                 <exclusion> -->
+        <!--                     <groupId>org.junit.vintage</groupId> -->
+        <!--                     <artifactId>junit-vintage-engine</artifactId> -->
+        <!--                 </exclusion> -->
+        <!--             </exclusions> -->
+        <!--         </dependency> -->
     </dependencies>
 
     <build>
@@ -51,6 +58,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
